@@ -2,6 +2,9 @@ Beaker Changelog
 ================
 
 1.0 (**tip**)
+* Added cookie delete to both cookie only sessions and normal sessions, to
+  help with proxies and such that may determine whether a user is logged in
+  via a cookie. (cookie varies, etc.). Suggested by Felix Schwarz.
 
 0.9.5 (6/19/2008)
 * Fixed bug in memcached to be tolerant of keys disappearing when memcached
